--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.0",
     "joi-browser": "^13.4.0",
+    "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
